# markcollab-backend-filesystem

./: Cargo.toml  README.md
migrations/: 0000_init.sql
src/: auth.rs  error.rs  main.rs
src/api/: extractors.rs  internal.rs  mod.rs  public.rs  utils.rs
src/db/: inmemory.rs  mod.rs  models.rs  postresql.rs
