[package]
name = "markcollab-backend-filesystem"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart", "tokio", "http2"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
opendal = { version = "0.55.0", features = ["services-fs", "services-s3"] }
futures-util = "0.3.32"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono", "macros"] }
reqwest = { version = "0.13.2", features = ["json"] }
http-serde = "2.1.1"
